--- a/Assignments/A2/public/q7/output.css
+++ b/Assignments/A2/public/q7/output.css
@@ -926,9 +926,6 @@ html {
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
@@ -952,9 +949,6 @@ html {
   }
   .w-20 {
     width: calc(var(--spacing) * 20);
-  }
-  .w-30 {
-    width: calc(var(--spacing) * 30);
   }
   .w-35 {
     width: calc(var(--spacing) * 35);
@@ -1682,9 +1676,6 @@ html {
     --tw-border-style: solid;
     border-style: solid;
   }
-  .border-amber-100 {
-    border-color: var(--color-amber-100);
-  }
   .border-amber-400 {
     border-color: var(--color-amber-400);
   }
@@ -1693,9 +1684,6 @@ html {
   }
   .border-orange-200 {
     border-color: var(--color-orange-200);
-  }
-  .border-orange-300 {
-    border-color: var(--color-orange-300);
   }
   .bg-\(--my_variable\) {
     background-color: var(--my_variable);
@@ -1735,6 +1723,9 @@ html {
   }
   .bg-orange-500 {
     background-color: var(--color-orange-500);
+  }
+  .bg-orange-700\/85 {
+    background-color: color-mix(in oklab, var(--color-orange-700) 85%, transparent);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -2159,9 +2150,6 @@ html {
   }
   .text-gray-500 {
     color: var(--color-gray-500);
-  }
-  .text-gray-800 {
-    color: var(--color-gray-800);
   }
   .text-gray-900 {
     color: var(--color-gray-900);
@@ -2778,12 +2766,6 @@ html {
       line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
-  .sm\:text-3xl {
-    @media (width >= 40rem) {
-      font-size: var(--text-3xl);
-      line-height: var(--tw-leading, var(--text-3xl--line-height));
-    }
-  }
   .sm\:text-6xl {
     @media (width >= 40rem) {
       font-size: var(--text-6xl);
@@ -3154,38 +3136,11 @@ html {
       }
     }
   }
-  .\[\&\>\*\]\:before\:content-\[\'2022\'\] {
-    &>* {
-      &::before {
-        content: var(--tw-content);
-        --tw-content: '2022';
-        content: var(--tw-content);
-      }
-    }
-  }
   .\[\&\>\*\]\:before\:content-\[\'\\2022\'\] {
     &>* {
       &::before {
         content: var(--tw-content);
         --tw-content: '\2022';
-        content: var(--tw-content);
-      }
-    }
-  }
-  .\[\&\>\*\]\:before\:content-\[\'\\x822022\'\] {
-    &>* {
-      &::before {
-        content: var(--tw-content);
-        --tw-content: '\x822022';
-        content: var(--tw-content);
-      }
-    }
-  }
-  .\[\&\>\*\]\:before\:content-\[\'hey\'\] {
-    &>* {
-      &::before {
-        content: var(--tw-content);
-        --tw-content: 'hey';
         content: var(--tw-content);
       }
     }
