--- a/Assignments/A2/public/q7/output.css
+++ b/Assignments/A2/public/q7/output.css
@@ -926,6 +926,9 @@ html {
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
@@ -1723,6 +1726,9 @@ html {
   }
   .bg-orange-500 {
     background-color: var(--color-orange-500);
+  }
+  .bg-orange-700 {
+    background-color: var(--color-orange-700);
   }
   .bg-orange-700\/85 {
     background-color: color-mix(in oklab, var(--color-orange-700) 85%, transparent);
