--- a/Assignments/A3/views/sign-in.ejs
+++ b/Assignments/A3/views/sign-in.ejs
@@ -28,6 +28,7 @@
 
           <label for="password" class="block">Password</label>
           <input
+            type="password"
             type="text"
             name="password"
             pattern="^[A-Za-z0-9]+$"
