--- a/Assignments/A3/public/css/output.css
+++ b/Assignments/A3/public/css/output.css
@@ -536,6 +536,9 @@ html {
   .pointer-events-none {
     pointer-events: none;
   }
+  .\!visible {
+    visibility: visible !important;
+  }
   .collapse {
     visibility: collapse;
   }
